# jr-rsch-ml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: dependabot-auto-merge.yml
datasets/: 2D_test.csv  2D_train.csv  50_startups_test.csv  50_startups_train.csv  age_blood_pressure_test.csv  age_blood_pressure_train.csv  churn_train.csv  cricket_chirp_data_test.csv  cricket_chirp_data_train.csv  iris.csv  loudoun_housing_data_test.csv
datasets/linear/: 1b_train.csv  d8_cricket_chirp.csv  info.txt  log_reg_first_day.csv  loudoun_housing_data_train.csv  titanic_train.csv
datasets/neural_networks/: boston.csv
jr_rsch_ml/intro/: day1.py  day4_matrices_football.py  day4_matrices_football_1998.csv  day4_matrices_football_1999.csv  day4_numpy_intro.py
src/: churn.py  d7_murder_unemployment.csv  d7_murder_unemployment.py  d8_age_blood_pressure.csv  d8_age_blood_pressure.py  d8_cricket_chirp.py  d9.py  data_cleaning_titanic.py  iris.py  linear_regression.py  logistic_regression.py  one_hot_encoding_example.py
src/intro/: 6_linear_regression.py  7_murder_unemployment.py  day4_matrices_football.py  day5_count_grades.py  day5_dictionary_practice.py  day6_matplotlib_intro.py
src/neural_networks/: boston_housing_csv.py  boston_housing_keras.py  imdb.py  mnist.py  mnist_cnn.py  mnist_filter_manual.py
src/regression/: 1b.py  churn.py  d2_matrices_football.py  d5_cost_function_lab.py  d8_age_blood_pressure.py  d8_cricket_chirp.py  d9.py  iris.py  logistic_regression.py  titanic.py
